# rust-pgbart

./: .gitignore  README.md
.github/workflows/: ci.yaml
bindings/: Cargo.toml  README.md  pyproject.toml
bindings/py_src/rust_pgbart/: __init__.py  bart.py  logp.py  pgbart.py
bindings/src/: data.rs  lib.rs
examples/: BART_introduction.ipynb  BART_introduction_Rust.ipynb
pgbart/: Cargo.toml
pgbart/src/: lib.rs  math.rs  particle.rs  pgbart.rs  tree.rs
